# MatrixInTerminal

./: .gitignore
c/: CMakeLists.txt  Makefile  README.md
c/src/: config.h  main.c  matrix.c
rust/: Cargo.toml
rust/src/: main.rs  model.rs
src/: config.h  matrix.h  ui.c  ui.h
